--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="say">I really hope you give me a chance</span><br>
                     <span class="say">To love you</span><br>
                     <br>
-                    <span class="say"><span class="space"></span>-- Yours, the Sun.</span>
+                    <span class="say"><span class="space"></span>-- Yours Dear,Nil</span>
                 </div>
             </div>
             <div id="clock-box">
