--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 tree.snapshot("p2", 500, 0, 610, 680);
 
                 canvas.parent().css("background", "url(" + tree.toDataURL('image/png') + ")");
-                canvas.css("background", "#ffc0cb");
+                canvas.css("background", "#000");
                 $await(Jscex.Async.sleep(300));
                 canvas.css("background", "none");
             }));
