--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div id="clock-box">
                 <a href="https://sdnilportfolio.vercel.app/" target="_blank">The stars</a> and <a
-                    href="https://sunguoqi.com" target="_blank">the moon</a> have been together for
+                    href="https://sdnilportfolio.vercel.app/" target="_blank">the moon</a> have been together in earth for
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
