--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
             </div>
             <div id="clock-box">
-                <a href="https://sdnilportfolio.vercel.app/" target="_blank">The stars</a> and <a
-                    href="https://sdnilportfolio.vercel.app/" target="_blank">the moon</a> have been together in earth for
+                <a href="https://sdnilportfolio.vercel.app/" target="_blank">The Star</a> and <a
+                    href="https://sdnilportfolio.vercel.app/" target="_blank">the Moon</a> have been together in earth for
                 <div id="clock"></div>
             </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
